Add forgot password function and add CORS in Directus service
